Update -i18n Integration -FluentValidation Update

--- a/Hahn-ApplicatonProcess-December2020-ClientApp/src/app.html
+++ b/Hahn-ApplicatonProcess-December2020-ClientApp/src/app.html
@@ -1,3 +1,8 @@
 <template>
+  <require from="./components/layout/main/layout-main"></require>
+  <layout-main></layout-main>
+
+
   <h1>${message}</h1>
+  <button class="btn btn-primary">${ 'home' & t }</button>
 </template>
