--- a/Hahn.ApplicatonProcess.December2020.Web/wwwroot/index.html
+++ b/Hahn.ApplicatonProcess.December2020.Web/wwwroot/index.html
@@ -7,7 +7,7 @@
     <base href="">
     <link rel="icon" href="favicon.ico">
     <!-- imported CSS are concatenated and added automatically -->
-  </head>
+  <link href="vendors~0f421c3d.6b354dc6553de0a20ac0.chunk.css" rel="stylesheet"></head>
   <body aurelia-app="main">
-  <script src="runtime~app.ea51e01e8cea8879ffc7.bundle.js"></script><script src="vendors~2a42e354.ea51e01e8cea8879ffc7.chunk.js"></script><script src="vendors~0ba1d959.ea51e01e8cea8879ffc7.chunk.js"></script><script src="vendors~556c66f2.ea51e01e8cea8879ffc7.chunk.js"></script><script src="vendors~72fdf3f2.ea51e01e8cea8879ffc7.chunk.js"></script><script src="vendors~50e8d500.ea51e01e8cea8879ffc7.chunk.js"></script><script src="vendors~ecff2e3d.ea51e01e8cea8879ffc7.chunk.js"></script><script src="vendors~9e0f4621.ea51e01e8cea8879ffc7.chunk.js"></script><script src="app~f075b844.ea51e01e8cea8879ffc7.chunk.js"></script></body>
+  <script src="runtime~app.6b354dc6553de0a20ac0.bundle.js"></script><script src="vendors~253ae210.6b354dc6553de0a20ac0.chunk.js"></script><script src="vendors~556c66f2.6b354dc6553de0a20ac0.chunk.js"></script><script src="vendors~540a8aca.6b354dc6553de0a20ac0.chunk.js"></script><script src="vendors~e302ef32.6b354dc6553de0a20ac0.chunk.js"></script><script src="vendors~50e8d500.6b354dc6553de0a20ac0.chunk.js"></script><script src="vendors~5ea1390f.6b354dc6553de0a20ac0.chunk.js"></script><script src="vendors~ecff2e3d.6b354dc6553de0a20ac0.chunk.js"></script><script src="vendors~9e0f4621.6b354dc6553de0a20ac0.chunk.js"></script><script src="vendors~0f421c3d.6b354dc6553de0a20ac0.chunk.js"></script><script src="vendors~f0dd280a.6b354dc6553de0a20ac0.chunk.js"></script><script src="vendors~7d359b94.6b354dc6553de0a20ac0.chunk.js"></script><script src="vendors~00cb062a.6b354dc6553de0a20ac0.chunk.js"></script><script src="app~f075b844.6b354dc6553de0a20ac0.chunk.js"></script></body>
 </html>
