--- a/Hahn-ApplicatonProcess-December2020-ClientApp/src/app.html
+++ b/Hahn-ApplicatonProcess-December2020-ClientApp/src/app.html
@@ -1,8 +1,8 @@
 <template>
+  <!-- <require from="./components/layout/main/layout-main"></require> -->
+  <require from="./styles.css"></require>
+  
   <require from="./components/layout/main/layout-main"></require>
-  <layout-main></layout-main>
-
-
-  <h1>${message}</h1>
-  <button class="btn btn-primary">${ 'home' & t }</button>
+  <layout-main router.bind="router"></layout-main>
+  <router-view></router-view>  
 </template>
