--- a/Hahn.ApplicatonProcess.December2020.Web/wwwroot/index.html
+++ b/Hahn.ApplicatonProcess.December2020.Web/wwwroot/index.html
@@ -2,12 +2,13 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Aurelia Navigation Skeleton</title>
+    <title>Aurelia App</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <base href="">
     <link rel="icon" href="favicon.ico">
     <!-- imported CSS are concatenated and added automatically -->
-  <link href="vendors~0f421c3d.6b354dc6553de0a20ac0.chunk.css" rel="stylesheet"></head>
+  <link href="vendors~0f421c3d.0d46f3c60bebaab2ac9c.chunk.css" rel="stylesheet"></head>
   <body aurelia-app="main">
-  <script src="runtime~app.6b354dc6553de0a20ac0.bundle.js"></script><script src="vendors~253ae210.6b354dc6553de0a20ac0.chunk.js"></script><script src="vendors~556c66f2.6b354dc6553de0a20ac0.chunk.js"></script><script src="vendors~540a8aca.6b354dc6553de0a20ac0.chunk.js"></script><script src="vendors~e302ef32.6b354dc6553de0a20ac0.chunk.js"></script><script src="vendors~50e8d500.6b354dc6553de0a20ac0.chunk.js"></script><script src="vendors~5ea1390f.6b354dc6553de0a20ac0.chunk.js"></script><script src="vendors~ecff2e3d.6b354dc6553de0a20ac0.chunk.js"></script><script src="vendors~9e0f4621.6b354dc6553de0a20ac0.chunk.js"></script><script src="vendors~0f421c3d.6b354dc6553de0a20ac0.chunk.js"></script><script src="vendors~f0dd280a.6b354dc6553de0a20ac0.chunk.js"></script><script src="vendors~7d359b94.6b354dc6553de0a20ac0.chunk.js"></script><script src="vendors~00cb062a.6b354dc6553de0a20ac0.chunk.js"></script><script src="app~f075b844.6b354dc6553de0a20ac0.chunk.js"></script></body>
+  <script src="runtime~app.0d46f3c60bebaab2ac9c.bundle.js"></script><script src="vendors~253ae210.0d46f3c60bebaab2ac9c.chunk.js"></script><script src="vendors~556c66f2.0d46f3c60bebaab2ac9c.chunk.js"></script><script src="vendors~540a8aca.0d46f3c60bebaab2ac9c.chunk.js"></script><script src="vendors~e302ef32.0d46f3c60bebaab2ac9c.chunk.js"></script><script src="vendors~50e8d500.0d46f3c60bebaab2ac9c.chunk.js"></script><script src="vendors~5ea1390f.0d46f3c60bebaab2ac9c.chunk.js"></script><script src="vendors~ecff2e3d.0d46f3c60bebaab2ac9c.chunk.js"></script><script src="vendors~9e0f4621.0d46f3c60bebaab2ac9c.chunk.js"></script><script src="vendors~7274e1de.0d46f3c60bebaab2ac9c.chunk.js"></script><script src="vendors~0f421c3d.0d46f3c60bebaab2ac9c.chunk.js"></script><script src="vendors~00cb062a.0d46f3c60bebaab2ac9c.chunk.js"></script><script src="vendors~f9ca8911.0d46f3c60bebaab2ac9c.chunk.js"></script><script src="app~f075b844.0d46f3c60bebaab2ac9c.chunk.js"></script></body>
+  <script src="https://code.iconify.design/1/1.0.7/iconify.min.js"></script>
 </html>
