Update -Router binding is not necessary -UI Update -Simple Form Example -Api Response & Applicant Models -Fixes

--- a/Hahn-ApplicatonProcess-December2020-ClientApp/src/app.html
+++ b/Hahn-ApplicatonProcess-December2020-ClientApp/src/app.html
@@ -1,7 +1,6 @@
 <template>
   <!-- <require from="./components/layout/main/layout-main"></require> -->
-  <require from="./styles.css"></require>
-  
-  <require from="./components/layout/main/layout-main"></require>
-  <layout-main router.bind="router"></layout-main>
+  <require from="./styles.css"></require>  
+  <require from="./components/layout/main/layout-main"></require>  
+  <layout-main></layout-main>
 </template>
